# voir

./: .gitignore  BUILD_SETUP.md  DEVELOPMENT.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: generate-icons.py  vendor-bundle.mjs  voir.cmd  voir.ps1
src/: index.html
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: explorer.rs  lib.rs  main.rs  markdown.rs  watcher.rs
src/scripts/: app.js  context-menu.js  explorer.js  i18n.js  search.js  tabs.js  toc.js  viewer.js
src/styles/: github-markdown-overrides.css  main.css  print.css  themes.css
test/: sample.md
